edition = "2023";  // successor to proto2 and proto3

package storage;
import "google/protobuf/go_features.proto";

option go_package = "./storage;storage";
option java_package = "io.stackrox.proto.storage";
option features.(pb.go).api_level = API_HYBRID;
option features.field_presence = IMPLICIT;
option features.enum_type = OPEN;
// `packed=false` needs to be transformed to field-level repeated_field_encoding
// features in Editions syntax
option features.json_format = ALLOW;
option features.utf8_validation = VERIFY;

// DelegatedRegistryConfig determines how to handle scan requests.
//
// Refer to v1.DelegatedRegistryConfig for more detailed docs.
//
// Any changes made to this message must also be reflected in central/delegatedregistryconfig/convert/convert.go.
message DelegatedRegistryConfig {
  enum EnabledFor {
    NONE = 0;
    ALL = 1;
    SPECIFIC = 2;
  }

  message DelegatedRegistry {
    string path = 1;
    string cluster_id = 2;
  }

  EnabledFor enabled_for = 1;
  string default_cluster_id = 2;
  repeated DelegatedRegistry registries = 3 [lazy = true];
}
